[package]
name = "vulkano-and-ash_ash"
version = "0.1.0"
authors = ["Brandon Pollack <brandonpollack23@gmail.com>"]
edition = "2018"

[[bin]]
name = "base_code_ash"
path = "src/00_base_code.rs"

[dependencies]
ash = "0.29.0"
winit = "0.21.0"
# link between vulkano and winit, used for required_extensions
vulkano-win = "0.17.0"
