[package]
name = "vulkano-and-ash_vulkano"
version = "0.1.0"
authors = ["Brandon Pollack <brandonpollack23@gmail.com>"]
edition = "2018"

[[bin]]
name = "base_code_vulkano"
path = "src/00_base_code.rs"

[[bin]]
name = "instance_creation_vulkano"
path = "src/01_instance.rs"

[[bin]]
name = "validation_layers_vulkano"
path = "src/02_validation_layers.rs"

[[bin]]
name = "physical_device_selection_vulkano"
path = "src/03_physical_device_selection.rs"

[[bin]]
name = "logical_device_vulkano"
path = "src/04_logical_device.rs"

[[bin]]
name = "window_surface_vulkano"
path = "src/05_window_surface.rs"

[[bin]]
name = "swap_chain_vulkano"
path = "src/06_swap_chain.rs"

[[bin]]
name = "image_views_vulkano"
path = "src/07_image_views.rs"

[[bin]]
name = "graphics_pipeline_vulkano"
path = "src/08_graphics_pipeline.rs"

[dependencies]
vulkano = "0.17.0"
winit = "0.21.0"
# link between vulkano and winit, used for required_extensions
vulkano-win = "0.17.0"
