[package]
name = "vulkano-and-ash_vulkano"
version = "0.1.0"
authors = ["Brandon Pollack <brandonpollack23@gmail.com>"]
edition = "2018"

[[bin]]
name = "base_code_vulkano"
path = "src/00_base_code.rs"

[[bin]]
name = "instance_creation_vulkano"
path = "src/01_instance.rs"

[[bin]]
name = "validation_layers_vulkano"
path = "src/02_validation_layers.rs"

[[bin]]
name = "physical_device_selection_vulkano"
path = "src/03_physical_device_selection.rs"

[[bin]]
name = "logical_device_vulkano"
path = "src/04_logical_device.rs"

[[bin]]
name = "window_surface_vulkano"
path = "src/05_window_surface.rs"

[[bin]]
name = "swap_chain_vulkano"
path = "src/06_swap_chain.rs"

[[bin]]
name = "image_views_vulkano"
path = "src/07_image_views.rs"

[[bin]]
name = "graphics_pipeline_vulkano"
path = "src/08_graphics_pipeline.rs"

[[bin]]
name = "shader_modules_vulkano"
path = "src/09_shader_modules.rs"

[[bin]]
name = "fixed_functions_vulkano"
path = "src/10_fixed_functions.rs"

[[bin]]
name = "render_passes_vulkano"
path = "src/11_render_passes.rs"

[[bin]]
name = "graphics_pipeline_complete_vulkano"
path = "src/12_graphics_pipeline_complete.rs"

[[bin]]
name = "framebuffers_vulkano"
path = "src/13_framebuffers.rs"

[[bin]]
name = "command_buffers_vulkano"
path = "src/14_command_buffers.rs"

[[bin]]
name = "rendering_and_presentation_vulkano"
path = "src/15_rendering_and_presentation.rs"

[[bin]]
name = "swapchain_recreation_vulkano"
path = "src/16_swapchain_recreation.rs"

[[bin]]
name = "vertex_input_description_vertex_buffer_creation_vulkano"
path = "src/17_18_vertex_input_description_vertex_buffer_creation.rs"

[[bin]]
name = "staging_buffer_vulkano"
path = "src/19_staging_buffer.rs"

[[bin]]
name = "index_buffer_vulkano"
path = "src/20_index_buffer.rs"

[[bin]]
name = "uniform_buffer_objects_sets_vulkano"
path = "src/21_22_uniform_buffer_objects_pools_and_sets.rs"

[dependencies]
lazy_static = "1.4.0"
nalgebra-glm = "0.5.0"
vulkano = "0.17.0"
vulkano-shaders = "0.17.0"
vulkano-win = "0.17.0" # link between vulkano and winit, used for required_extensions
winit = "0.21.0"
